[gd_scene load_steps=14 format=3 uid="uid://54o66pm8gt41"]

[ext_resource type="Script" path="res://UI/CombatUI/ActiveButtonWithUses.gd" id="1_bp58t"]
[ext_resource type="Shader" path="res://Shaders/UI/GreyOut2D.gdshader" id="2_b6tcy"]
[ext_resource type="Texture2D" uid="uid://njx23fa8msit" path="res://Assets/Sprites/Icons/active-button/02_border.png" id="2_m227v"]
[ext_resource type="Texture2D" uid="uid://cwir2anir4w26" path="res://Assets/Sprites/Icons/active-button/03_white_border.png" id="3_qibmm"]
[ext_resource type="BitMap" uid="uid://dy2qt20t2yid2" path="res://Assets/Sprites/Icons/active-button/clickmask_bitmap.tres" id="4_bfd3d"]
[ext_resource type="Script" path="res://UI/CombatUI/ActiveButton.gd" id="5_n1wvt"]
[ext_resource type="Texture2D" uid="uid://huibk6r0e0bi" path="res://Assets/Sprites/KenneyParticles/circle_05_cropped.png" id="6_j43rt"]
[ext_resource type="Texture2D" uid="uid://b21okkqe6d4n2" path="res://Assets/Sprites/Icons/axe.png" id="7_sdsmr"]
[ext_resource type="PackedScene" uid="uid://cb7taeyq4heur" path="res://UI/CombatUI/Actives/ActiveUseBubble.tscn" id="8_178h3"]
[ext_resource type="FontFile" uid="uid://bgmbqeubb34cp" path="res://Assets/Fonts/rogue.ttf" id="10_nc7tr"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_at7uw"]
resource_local_to_scene = true
shader = ExtResource("2_b6tcy")
shader_parameter/grey_out_progress = 0.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fl46h"]
bg_color = Color(0.136719, 0.136719, 0.136719, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ouu5c"]
bg_color = Color(0.335938, 0.335938, 0.335938, 1)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[node name="ActiveButtonWithUses" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = -10.0
offset_top = -10.0
offset_right = 102.0
offset_bottom = 102.0
script = ExtResource("1_bp58t")

[node name="ActiveButton" type="TextureButton" parent="."]
unique_name_in_owner = true
clip_children = 2
texture_filter = 4
material = SubResource("ShaderMaterial_at7uw")
custom_minimum_size = Vector2(102, 102)
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 102.0
offset_bottom = 102.0
size_flags_horizontal = 0
size_flags_vertical = 4
mouse_default_cursor_shape = 2
toggle_mode = true
texture_normal = ExtResource("2_m227v")
texture_pressed = ExtResource("3_qibmm")
texture_hover = ExtResource("3_qibmm")
texture_click_mask = ExtResource("4_bfd3d")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("5_n1wvt")

[node name="CircleBackground" type="TextureRect" parent="ActiveButton"]
modulate = Color(0, 0, 0, 1)
clip_children = 2
layout_mode = 0
offset_right = 102.0
offset_bottom = 102.0
texture = ExtResource("6_j43rt")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Icon" type="TextureRect" parent="ActiveButton"]
unique_name_in_owner = true
texture_filter = 4
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 86.0
offset_bottom = 86.0
texture = ExtResource("7_sdsmr")
expand_mode = 1

[node name="ActiveUseBubble1" parent="." instance=ExtResource("8_178h3")]
offset_left = 43.0
offset_top = 15.0
offset_right = 43.0
offset_bottom = 15.0
enabled_color = Color(0.386895, 0.855469, 0.816779, 1)

[node name="ActiveUseBubble2" parent="." instance=ExtResource("8_178h3")]
offset_left = 62.0
offset_top = 10.0
offset_right = 62.0
offset_bottom = 10.0

[node name="ActiveUseBubble3" parent="." instance=ExtResource("8_178h3")]
offset_left = 81.0
offset_top = 15.0
offset_right = 81.0
offset_bottom = 15.0
enabled_color = Color(0.362162, 0.800781, 0.764565, 1)
disabled_color = Color(0.25, 0.25, 0.25, 1)

[node name="Position1" type="Marker2D" parent="."]
position = Vector2(43, 15)

[node name="Position2" type="Marker2D" parent="."]
position = Vector2(62, 10)

[node name="Position3" type="Marker2D" parent="."]
position = Vector2(81, 15)

[node name="TwoBubblesPosition1" type="Marker2D" parent="."]
position = Vector2(52, 13)

[node name="TwoBubblesPosition2" type="Marker2D" parent="."]
position = Vector2(72, 13)

[node name="ColorRect" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4375
anchor_top = 0.839286
anchor_right = 0.6875
anchor_bottom = 1.13393
theme_override_styles/panel = SubResource("StyleBoxFlat_fl46h")
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="PanelContainer" type="PanelContainer" parent="ColorRect/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ouu5c")

[node name="HotkeyLabel" type="Label" parent="ColorRect/MarginContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("10_nc7tr")
theme_override_font_sizes/font_size = 22
text = "F"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="ActiveButton" to="." method="_on_active_button_mouse_entered"]
[connection signal="mouse_exited" from="ActiveButton" to="." method="_on_active_button_mouse_exited"]
[connection signal="toggled" from="ActiveButton" to="." method="_on_active_button_toggled"]
